# repro545

./: .bazelrc  .travis.yml  BUILD.bazel  WORKSPACE
tools/: bazel-0.21.0-installer-linux-x86_64.sh.sha256
