load("@io_tweag_rules_haskell//haskell:haskell.bzl", "haskell_toolchain")

genrule(
    name = "toolchain_as",
    outs = ["as"],
    cmd = "ln -s /usr/bin/as $@",
)

genrule(
    name = "toolchain_ld",
    outs = ["ld"],
    cmd = "ln -s /usr/bin/ld $@",
)

genrule(
    name = "toolchain_touch",
    outs = ["touch"],
    cmd = "ln -s /usr/bin/touch $@",
)

haskell_toolchain(
    name = "ghc",
    extra_binaries = [
        ":toolchain_as",
        ":toolchain_ld",
        ":toolchain_touch",
    ],
    tools = "@ghc//:bin",
    version = "8.4.4",
)
